--- a/excursion/index.html
+++ b/excursion/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excursion</title>
     <link rel="stylesheet" href="resources/css/style.css">
+    <link href="C:\Users\congh\Documents\learnGit\WD-place\dist\output.css" rel="stylesheet">
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
