--- a/excursion/index.html
+++ b/excursion/index.html
@@ -4,11 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excursion</title>
-    <link rel="stylesheet" href="resources/css/style.css">
-    <link href="C:\Users\congh\Documents\learnGit\WD-place\dist\output.css" rel="stylesheet">
+    <link rel="stylesheet" href="./resources/css/style.css">
 </head>
-<body>
-    <h1>Discover hidden places in the world around you</h1>
+<body class="bg-black">
+    <h1 class="mx-1 my-4 font-bold text-white text-2xl text-center">Discover hidden places in the world around you</h1>
     <p><a href="#">Download Excursion (Comming Soon!)</a></p>
 </body>
 </html>
