finish project excursion

--- a/excursion/index.html
+++ b/excursion/index.html
@@ -6,8 +6,27 @@
     <title>Excursion</title>
     <link rel="stylesheet" href="./resources/css/style.css">
 </head>
-<body class="bg-black">
-    <h1 class="mx-1 my-4 font-bold text-white text-2xl text-center">Discover hidden places in the world around you</h1>
-    <p><a href="#">Download Excursion (Comming Soon!)</a></p>
+<body class="bg-black items-center mx-auto text-center">
+    <h1 class="mx-1 my-4 font-bold text-white text-2xl ">Discover hidden places in the world around you</h1>
+    <div class="my-4">
+        <a class="text-cyan-700 font-sans" href="#">Download Excursion (Comming Soon!)</a>
+    </div>
+    <div class="flex justify-center">
+        <video src="./resources/videos/excursion.mp4" autoplay loop type="video/mp4"></video>
+    </div>
+    <h1 class="my-4 text-center text-white text-3xl ">
+        Your personal travel guide.
+    </h1>
+    <h4 class="text-gray-600 my-8"> 
+        Excursion remembers places you like and recommend new points of interest around you.
+    </h4>
+    <img class="block mx-auto mt-2" src="./resources/pictures/camp.webp" alt="">
+    <img class="blocl mx-auto my-8" src="./resources/pictures/phone.png" alt="">
+    <h4 class="text-gray-600 my-8"> 
+        Comming soon for Iphone and Android
+    </h4>
+    <div class="my-4">
+        <a class="text-cyan-700 font-sans" href="#">Download Excursion (Comming Soon!)</a>
+    </div>
 </body>
 </html>
